[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.36.0", features = ["full"] }

#--json serialzie-deserialize
serde = {version = "1",features = ["derive"]}
serde_json = "1"
serde_with = "3"

#--web
axum = {version = "0.7.4",features = ["macros","multipart"]}
tower-http = {version = "0.4",features = ["fs"]}
tower-cookies = "0.9"

#--tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter"]}
#--others
uuid = {version = "1",features = ["v4","fast-rng"]}
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
log = "0.4.20"

[dev-dependencies]
httpc-test = "0.1.9"
